--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,16 @@ html {
   min-height: 100%;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
-  width: 960px;
-  justify-content: center;
   border: 3px solid blue;
+  margin: 0;
+  padding: 0;
+  width: 960px;
 }
