--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ html {
 body {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 .container {
@@ -14,4 +17,11 @@ body {
   margin: 0;
   padding: 0;
   width: 960px;
+}
+
+.dimension {
+  text-decoration: none;
+  background-color: whitesmoke;
+  border: 1px solid black;
+  font-size: 15px;
 }
